.jekyll-cache/Jekyll/Cache/Jekyll--Converters--Markdown/38/fa5158f9484ca1d09b2078bd2dfe8823fc9ba8e3a9e32c0556398bb77fc8a9
I"‚<console>:14: error: not found: value spark
       import spark.implicits._
              ^
<console>:14: error: not found: value spark
       import spark.sql
              ^
              
scala&gt;  var rdd = sc.parallelize(1 to 10)
<console>:39: error: not found: value sc
        var rdd = sc.parallelize(1 to 10)
        
        
æ—¥å¿—ï¼š
Caused by: java.lang.RuntimeException: java.net.ConnectException: Call From localhost/127.0.0.1 to localhost:8020 failed on connection exception: java.net.ConnectException: Connection refused; For more details see:  http://wiki.apache.org/hadoop/ConnectionRefused
</console></console></console>
:ET